updated v1